--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 
 .ipynb_checkpoints/mission_to_mars-checkpoint.ipynb
 .vscode/settings.json
+*.pyc
+*.pyc
+__pycache__/app.cpython-36.pyc
+__pycache__/scrape_mars.cpython-36.pyc
